test/cases/compile_errors/generic_function_call_assigned_to_incorrect_type.zig
pub export fn entry() void {
    var res: []i32 = undefined;
    res = my_alloc(i32);
}
fn my_alloc(comptime arg: type) anyerror!arg {
    unreachable;
}

// error
// backend=stage2
// target=native
//
// :3:18: error: expected type '[]i32', found 'anyerror!i32'
